<resources>
    <string name="app_name">Inventall Shopping Lists</string>
    <string name="your_shopping_lists">Your shopping lists</string>
    <string name="no_lists_message">Create a shopping list with the blue plus button.</string>
    <string name="create_a_list">Create a list</string>
    <string name="list_name">List name</string>
    <string name="create">Create</string>
    <string name="list_name_empty_message">List name cannot be empty!</string>
    <string name="edit_list">Edit list</string>
    <string name="save_changes">Save changes</string>
    <string name="delete_list">Delete list</string>
    <string name="hard_delete_list_message">Are you sure you want to delete this list? (This will also delete any items that it has.)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="shopping_list">Shopping list</string>
    <string name="no_items_message">Add items to your list with the blue plus button.</string>
    <string name="category0">Cosmetics, household chemicals</string>
    <string name="category1">Ready meals and sauces</string>
    <string name="category2">Cofee and tea</string>
    <string name="category3">Canned food</string>
    <string name="category4">Meat, sausages</string>
    <string name="category5">Dairy</string>
    <string name="category6">Soft drinks, juices, water</string>
    <string name="category7">Fruits</string>
    <string name="category8">Bread</string>
    <string name="category9">Preserves</string>
    <string name="category10">Spices</string>
    <string name="category11">" Fish, seafood"</string>
    <string name="category12">Loose</string>
    <string name="category13">Sweets and snacks</string>
    <string name="category14">Clothes</string>
    <string name="category15">Vegetables</string>
    <string name="add_item">Add item</string>
    <string name="item_name">Item name</string>
    <string name="item_name_empty_message">Please enter a name for the item</string>
    <string name="adding_item">Adding item</string>
    <string name="amount_empty_message">Please enter an amount</string>
    <string name="amount">Amount</string>
    <string name="tag">Tag</string>
    <string name="save">Save</string>
</resources>