<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation_graph"
    android:label="Edit list"
    app:startDestination="@id/shoppingListsFragment">

    <fragment
        android:id="@+id/shoppingListsFragment"
        android:name="com.inventall.shoppinglists.fragments.ShoppingListsFragment"
        android:label="@string/your_shopping_lists"
        tools:layout="@layout/fragment_shopping_lists">
        <action
            android:id="@+id/action_shoppingListsFragment_to_createListFragment"
            app:destination="@id/createListFragment" />
        <action
            android:id="@+id/action_shoppingListsFragment_to_itemsFragment"
            app:destination="@id/itemsFragment" />
        <action
            android:id="@+id/action_shoppingListsFragment_to_editListFragment"
            app:destination="@id/editListFragment" />
    </fragment>
    <fragment
        android:id="@+id/createListFragment"
        android:name="com.inventall.shoppinglists.fragments.CreateListFragment"
        android:label="@string/create_a_list"
        tools:layout="@layout/fragment_create_list">
        <action
            android:id="@+id/action_createListFragment_to_shoppingListsFragment"
            app:destination="@id/shoppingListsFragment"
            app:popUpTo="@id/shoppingListsFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/itemsFragment"
        android:name="com.inventall.shoppinglists.fragments.ItemsFragment"
        android:label="@string/shopping_list"
        tools:layout="@layout/fragment_items">
        <argument
            android:name="shoppingListId"
            app:argType="integer" />
        <action
            android:id="@+id/action_itemsFragment_to_savedOrNewItemFragment"
            app:destination="@id/savedOrNewItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/savedOrNewItemFragment"
        android:name="com.inventall.shoppinglists.fragments.SavedOrNewItemFragment"
        android:label="@string/add_item"
        tools:layout="@layout/fragment_saved_or_new_item">
        <argument
            android:name="shoppingListId"
            app:argType="integer" />
        <action
            android:id="@+id/action_savedOrNewItemFragment_to_addNewItemFragment"
            app:destination="@id/addNewItemFragment" />
        <action
            android:id="@+id/action_savedOrNewItemFragment_to_addSavedItemFragment"
            app:destination="@id/addSavedItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/addNewItemFragment"
        android:name="com.inventall.shoppinglists.fragments.AddNewItemFragment"
        android:label="@string/adding_item"
        tools:layout="@layout/fragment_add_new_item">
        <argument
            android:name="shoppingListId"
            app:argType="integer" />
        <argument
            android:name="itemName"
            app:argType="string" />
        <action
            android:id="@+id/action_addNewItemFragment_to_itemsFragment"
            app:destination="@id/itemsFragment"
            app:popUpTo="@id/itemsFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/addSavedItemFragment"
        android:name="com.inventall.shoppinglists.fragments.AddSavedItemFragment"
        android:label="@string/adding_item"
        tools:layout="@layout/fragment_add_saved_item">
        <action
            android:id="@+id/action_addSavedItemFragment_to_itemsFragment"
            app:destination="@id/itemsFragment"
            app:popUpTo="@id/itemsFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="shoppingListId"
            app:argType="integer" />
        <argument
            android:name="savedItemId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/editListFragment"
        android:name="com.inventall.shoppinglists.fragments.EditListFragment"
        android:label="@string/edit_list"
        tools:layout="@layout/fragment_edit_list">
        <argument
            android:name="shoppingListId"
            app:argType="integer" />
        <action
            android:id="@+id/action_editListFragment_to_shoppingListsFragment"
            app:destination="@id/shoppingListsFragment"
            app:popUpTo="@id/shoppingListsFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>